k8/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdicidr
  namespace: production

spec:
  serviceName: rdicidr
  replicas: 3
  selector:
    matchLabels:
      app: rdicidr
  template:
    metadata:
      labels:
        app: rdicidr
  
    spec:
      containers:
        - name: rdicidr
          image: rdicidr:local
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
